--- a/src/app/pages/rule-book/components/cup/rounds/rounds.component.html
+++ b/src/app/pages/rule-book/components/cup/rounds/rounds.component.html
@@ -13,8 +13,9 @@
   <ion-card>
     <h3>Fase a gironi</h3>
     <p>
-      La Coppa è composta da due gironi di sei squadre che si affrontano (andata e ritorno) nella 12°, 14°, 16°, 18°, 20°, 22°, 24°, 25° giornata di Serie A (possibili
-      variazioni causate dalla specificità della singola stagione).
+      La Coppa è composta da due gironi di sei squadre che si affrontano (andata
+      e ritorno) nella 12°, 14°, 16°, 18°, 20°, 22°, 24°, 25° giornata di Serie
+      A (possibili variazioni causate dalla specificità della singola stagione).
     </p>
     <p>
       Per ogni girone passano le prime quattro squadre; le prime due squadre di
