--- a/src/app/pages/player/player.page.html
+++ b/src/app/pages/player/player.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text=""></ion-back-button>
+    </ion-buttons>
     <ion-title
       >{{player?.name | formatName}}
       <ng-container *ngIf="player?.team"
