--- a/src/app/pages/team-list/team-list.page.html
+++ b/src/app/pages/team-list/team-list.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Seleziona squadra</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,15 +13,15 @@
       *ngFor="let team of teams"
       (click)="navigateToTeam(team.teamId)"
       class="cnt"
-      ><div
-        ><img-loader
+      ><div>
+        <img-loader
           src="assets/img/new_piccio/{{logoMap[team.teamId-1]}}"
           [spinner]="true"
           [useImg]="true"
         ></img-loader
         ><!--<img src="assets/img/new_piccio/{{logoMap[team.teamId-1]}}" alt="" />-->
-        <p>{{team?.name}}</p></div
-      ></mat-card
+        <p>{{team?.name}}</p>
+      </div></mat-card
     >
   </div>
 </ion-content>
