--- a/src/app/pages/tool-ex/select-teams/select-teams.page.html
+++ b/src/app/pages/tool-ex/select-teams/select-teams.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar
+    ><ion-buttons slot="start">
+      <ion-back-button text=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Seleziona squadre</ion-title>
   </ion-toolbar>
 </ion-header>
