--- a/src/app/pages/rule-book/components/cup/rounds/rounds.component.html
+++ b/src/app/pages/rule-book/components/cup/rounds/rounds.component.html
@@ -14,7 +14,7 @@
     <h3>Fase a gironi</h3>
     <p>
       La Coppa è composta da due gironi di sei squadre che si affrontano (andata
-      e ritorno) nella 12°, 14°, 16°, 18°, 20°, 22°, 24°, 25° giornata di Serie
+      e ritorno) nella 10°, 12°, 14°, 16°, 18°, 20°, 22°, 24°, 25°,26° giornata di Serie
       A (possibili variazioni causate dalla specificità della singola stagione).
     </p>
     <p>
