feat: enable rinnovi

--- a/src/app/pages/balance/balance.page.html
+++ b/src/app/pages/balance/balance.page.html
@@ -68,9 +68,9 @@
           >{{seasonBalance?.annualBalance | currency:'EUR'}}</ion-col
         >
       </ion-row>
-      <!--<ion-row>
+      <ion-row>
         <ion-button (click)="navigateToRenewal()">Calcola rinnovi</ion-button>
-      </ion-row>-->
+      </ion-row>
     </ion-grid>
   </ion-card>
   <ion-card
