--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,11 +34,11 @@
       ></mat-card
     >
 
-    <mat-card routerLink="/rule-book">
+   <!-- <mat-card routerLink="/rule-book">
       <ion-row>
         <ion-icon style="color: grey" name="book"></ion-icon>
         <p>Regolamento</p></ion-row
       ></mat-card
-    >
+    >-->
   </div>
 </ion-content>
