--- a/src/app/pages/free/free.page.html
+++ b/src/app/pages/free/free.page.html
@@ -12,83 +12,55 @@
     <ion-grid class="filter-cnt">
       <ion-row>
         <ion-col>
-          <ion-select
-            [(ngModel)]="roleToFilter"
-            (ionChange)="filter()"
-            placeholder="Ruolo"
-          >
+          <ion-select [(ngModel)]="roleToFilter" (ionChange)="filter()" placeholder="Ruolo">
             <ion-select-option value="">
-              <b class="role" style="background-color: #f8ab29"
-                >Tutti i ruoli</b
-              >
+              <b class="role" style="background-color: #f8ab29">Tutti i ruoli</b>
             </ion-select-option>
-            <ion-select-option value="P">
-              <b class="role" style="background-color: #f8ab29">Portiere</b>
-            </ion-select-option>
-            <ion-select-option value="D">
-              <b class="role" style="background-color: #63c623">Difensore</b>
-            </ion-select-option>
-            <ion-select-option value="C">
-              <b class="role" style="background-color: #2e6be6"
-                >Centrocampista</b
-              >
-            </ion-select-option>
-            <ion-select-option value="A">
-              <b class="role" style="background-color: #f21a3c">Attaccante</b>
-            </ion-select-option>
+            <ng-container *ngFor="let r of mantraRoles">
+              <ion-select-option [value]="r">
+                <b class="role">{{r}}</b>
+              </ion-select-option>
+            </ng-container>
           </ion-select>
         </ion-col>
         <ion-col>
-          <ion-input
-            (ionChange)="filter()"
-            [(ngModel)]="nameToFilter"
-            placeholder="Nome"
-          ></ion-input
-        ></ion-col>
+          <ion-input (ionChange)="filter()" [(ngModel)]="nameToFilter" placeholder="Nome"></ion-input></ion-col>
       </ion-row>
     </ion-grid>
   </ion-card>
-  <table
-    mat-table
-    [dataSource]="players"
-    class="mat-elevation-z8 table-image-first-col"
-  >
+  <table mat-table [dataSource]="players" class="mat-elevation-z8 table-image-first-col">
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
     <ng-container matColumnDef="img">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <div
-          *ngIf="element.img"
-          style="width: fit-content"
-          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
-        >
+        <div *ngIf="element.img" style="width: fit-content"
+          [ngStyle]="{'background-color': computeRoleColor(element.role)}">
           <img src="{{element.img}}" alt="" />
         </div>
-        <b
-          *ngIf="!element.img"
-          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
-          class="role"
-          >{{element.role}}</b
-        >
+        <b *ngIf="!element.img" [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+          class="role">{{element.role}}</b>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef>Ruolo</th>
       <td mat-cell *matCellDef="let element">
-        <b
-          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
-          class="role"
-          >{{element.role}}</b
-        >
+        <b [ngStyle]="{'background-color': computeRoleColor(element.role)}" class="role">{{element.role}}</b>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let element">{{element.name | formatName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="mantraRole">
+      <th mat-header-cell *matHeaderCellDef>Ruolo</th>
+      <td mat-cell *matCellDef="let element">
+        {{element.mantraRole}}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="team">
@@ -106,10 +78,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr
-      (click)="navigateToPlayer(row.playerId)"
-      mat-row
-      *matRowDef="let row; columns: displayedColumns;"
-    ></tr>
+    <tr (click)="navigateToPlayer(row.playerId)" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </ion-content>
